[package]
name = "ws-async"
version = "0.1.0"
authors = ["Matt Hunzinger"]
edition = "2018"

[lib]
name = "ws_async"


[dependencies]
base64 = "0.11.0"
bytes = "0.5.2"
futures = "0.3.1"
hyper = "0.13.0"
pin-project = "0.4.6"
sha-1 = "0.8.1"
tokio = { version = "0.2.4", features = ["blocking", "io-util", "sync"] }
tower-service = "0.3.0"

[dev-dependencies]
tokio = { version = "0.2.4", features = ["macros"] }
