[package]
name = "ws-async"
version = "0.1.0"
authors = ["Matt Hunzinger"]
edition = "2018"

[lib]
name = "ws_async"

[dependencies]
base64 = "0.11.0"
bytes = "0.5.4"
futures = "0.3.5"
rand = "0.7.3"
sha-1 = "0.8.2"
tokio = { version = "0.2.21", features = ["blocking", "io-util", "stream", "sync"] }
tower-service = "0.3.0"
ws-frame = { git = "https://github.com/matthunz/ws-frame" }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["dns", "macros", "tcp"] }
